<resources>

    <string name="app_name">app commerce</string>

    <!--    Strings tela principal-->
    <string name="string_title">Título</string>
    <string name="string_subtitle">Subtitulo</string>
    <string name="string_popular_category">Categorias Populares</string>
    <string name="string_products">Produtos Recentes</string>
    <string name="string_product_title">Título do Produto</string>
    <string name="string_price">R$ 99,99</string>
    <string name="string_description_product">Descrição do Produto</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="string_buy">Comprar</string>
</resources>
