<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <ImageView
            android:id="@+id/iv_slider_img"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/slider_1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignBottom="@id/iv_slider_img"
            android:layout_centerInParent="true"
            android:background="#77000000"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_slider_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_title"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/tv_slider_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_subtitle"
                android:textAppearance="@android:style/TextAppearance.Large"
                android:textColor="@android:color/white" />

        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_category"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="2"
        android:orientation="vertical"
        tools:ignore="RtlHardcoded">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/string_popular_category"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_products"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="2"
        android:orientation="vertical"
        tools:ignore="RtlHardcoded">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/string_products"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

    </LinearLayout>

</LinearLayout>